Implemented cardUsesAbility, cardUsesAttack, useAttackhero and keeping coding style errors under so far under 30